갤러리 변경

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -12,6 +12,5 @@
         android:scrollbars="vertical"
         tools:itemCount="20"
         tools:layoutManager="GridLayoutManager"
-        tools:listitem="@layout/recycler_view_item"
-        tools:spanCount="2" />
+        tools:listitem="@layout/recycler_view_item"/>
 </FrameLayout>
