--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -1,7 +1,9 @@
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/imageView1"
-    android:layout_width="180dp"
-    android:layout_height="180dp"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
     android:layout_margin="5dp"
+    android:orientation="horizontal"
     tools:srcCompat="@tools:sample/backgrounds/scenic"/>
