--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -1,9 +1,13 @@
-<ImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/imageView1"
-    android:layout_width="150dp"
-    android:layout_height="150dp"
-    android:layout_margin="5dp"
-    android:orientation="horizontal"
-    tools:srcCompat="@tools:sample/backgrounds/scenic"/>
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/gallaryImage"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_margin="5dp"
+        android:background="#0C0C0C"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+</LinearLayout>
