--- a/app/src/main/res/layout/phone_recycler.xml
+++ b/app/src/main/res/layout/phone_recycler.xml
@@ -10,9 +10,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#9CB7CCB8"
+        android:fontFamily="monospace"
         android:text="전화번호"
         android:textColor="#120E0E"
-        android:textSize="28sp"
+        android:textSize="23sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
