난수 출력 개선, 클릭가능한 컴포넌트 완성. todo:해당하는 이미지 확대하여 출력하는 activity 혹은 투명 캔버스 생성 여부 확인

--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -1,13 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#BF9D9D">
 
     <ImageView
         android:id="@+id/gallaryImage"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_margin="5dp"
-        android:background="#0C0C0C"
+        android:background="#FDFCFC"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 </LinearLayout>
