--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -7,29 +7,33 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".gallery">
-
-
-
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/galleryRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#BF9D9D"
+        android:background="#E8E8E8"
         android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
-        tools:listitem="@layout/recycler_view_item" >
+        tools:listitem="@layout/recycler_view_item">
     </androidx.recyclerview.widget.RecyclerView>
+
+    <ImageView
+        android:id="@+id/blackBorad"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        android:visibility="gone"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
-        android:visibility="invisible">
-
+        android:visibility="gone">
     </androidx.viewpager.widget.ViewPager>
+
+
 
     <Button
         android:id="@+id/xButton"
