--- a/app/src/main/res/layout/fragment_free.xml
+++ b/app/src/main/res/layout/fragment_free.xml
@@ -25,6 +25,7 @@
             android:gravity="center"
             android:hint="English message Only"
             android:inputType="text"
+            android:maxLength="40"
             android:textAlignment="center" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -32,12 +33,26 @@
         android:id="@+id/bt_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="convert!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
         app:layout_constraintVertical_bias="0.062" />
+
+    <TextView
+        android:id="@+id/tv_morse"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_submit" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
