--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    >
 
-    <LinearLayout
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tablayout_control"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/bt_phone"
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/phone_tab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/button_round"
-            android:text="phone"
-            app:layout_constraintEnd_toStartOf="@+id/bt_gallery"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="phone"></com.google.android.material.tabs.TabItem>
 
-        <Button
-            android:id="@+id/bt_gallery"
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/gallery_tab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/button_round"
-            android:text="gallery"
-            app:layout_constraintEnd_toStartOf="@+id/bt_free"
-            app:layout_constraintStart_toEndOf="@+id/bt_phone"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="gallery"></com.google.android.material.tabs.TabItem>
 
-        <Button
-            android:id="@+id/bt_free"
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/morse_tab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/button_round"
-            android:text="Morse"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/bt_gallery"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="morse"></com.google.android.material.tabs.TabItem>
 
-    </LinearLayout>
+    </com.google.android.material.tabs.TabLayout>
 
-    <LinearLayout
-        android:id="@+id/fragment_container"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager_control"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tablayout_control"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10"
-        android:orientation="vertical" />
+        android:layout_height="0dp"></androidx.viewpager2.widget.ViewPager2>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
