--- a/app/src/main/res/layout/gallery_recycler.xml
+++ b/app/src/main/res/layout/gallery_recycler.xml
@@ -6,8 +6,8 @@
     android:background="@color/white">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="351dp"
+        android:layout_height="332dp"
         android:layout_gravity="center"
         android:layout_margin="5dp"
         card_view:cardBackgroundColor="@color/white"
