--- a/app/src/main/res/layout/phone_recycler.xml
+++ b/app/src/main/res/layout/phone_recycler.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/ConstraintLayout"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:id="@+id/ConstraintLayout">
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -16,13 +17,15 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#F1F1F1">
 
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:text="TextView"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toTopOf="@+id/tv_phone"
                 app:layout_constraintEnd_toStartOf="@+id/ib_call"
                 app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +36,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:text="TextView"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/ib_call"
                 app:layout_constraintStart_toStartOf="parent"
