--- a/app/src/main/res/layout/phone_recycler.xml
+++ b/app/src/main/res/layout/phone_recycler.xml
@@ -2,11 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ConstraintLayout"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:orientation="vertical">
+    android:id="@+id/ConstraintLayout">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -18,7 +17,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#F1F1F1">
+            android:background="#F1F1F1"
+            >
 
             <TextView
                 android:id="@+id/tv_name"
