--- a/app/src/main/res/layout/fragment_free.xml
+++ b/app/src/main/res/layout/fragment_free.xml
@@ -52,6 +52,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="400dp"
         android:gravity="center"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
